Add drop_idle_publisher 10s;

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,7 @@ rtmp {
          record off;
          hls  on;
          hls_path /data/hls;
+         drop_idle_publisher 10s;
          hls_fragment 1s;
          hls_type live;
       }
