Fix error install 401

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,19 +7,22 @@ events {
 error_log stderr;
 
 rtmp {
-   server {
-      listen 1935;
-      chunk_size 4096;
+    server {
+        listen 1935;
+        buflen 500ms;
+        notify_method get;
+        publish_time_fix off;
+        # chunk_size 4096;
 
-      application live {
-         live on;
-         record off;
-         hls  on;
-         hls_path /data/hls;
-         hls_fragment 1s;
-         hls_type live;
-      }
-   }
+        application live {
+            live on;
+            record off;
+            hls  on;
+            hls_path /data/hls;
+            hls_fragment 1;
+            hls_type live;
+        }
+    }
 }
 
 http {
